<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/white"
        android:divider="@drawable/divider_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_medium_small"
        android:paddingRight="@dimen/spacing_medium_small"
        android:showDividers="middle">

        <LinearLayout
            android:id="@+id/llHead"
            style="@style/myListStyle"
            android:paddingBottom="@dimen/spacing_medium_small"
            android:paddingTop="@dimen/spacing_medium_small">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imgHead" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgHeadModify"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSex"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex" />

            <TextView
                android:id="@+id/tvSexModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBirthday"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/tvBirthdayModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGrade"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/grade" />

            <TextView
                android:id="@+id/tvGradeModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llClassGrade"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/classGrade" />

            <TextView
                android:id="@+id/tvClassGradeModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Ll_phone"
            style="@style/myListStyle"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parentPhone" />

            <EditText
                android:id="@+id/tvParentPhoneModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_medium_large"
                android:paddingBottom="@dimen/spacing_medium_large"
                android:background="@null"
                android:gravity="right|center"
                android:hint="请填写手机号"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/txtLight"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNation"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nation" />

            <TextView
                android:id="@+id/tvNationModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSchool"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/school" />

            <TextView
                android:id="@+id/tvSchoolModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAge"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agemodify" />

            <TextView
                android:id="@+id/tvAgeModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHeight"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heightModify" />

            <TextView
                android:id="@+id/tvHeightModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWeight"
            style="@style/myListStyle">

            <TextView
                style="@style/myListTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weightModify" />

            <TextView
                android:id="@+id/tvWeightModify"
                style="@style/myListContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>