<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/spacing_medium_large"
        app:layout_constraintBottom_toTopOf="@+id/btn_check_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data1"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data2"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data5"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data6"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="坐位体"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data8"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data9"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data10"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium_small"
                android:paddingTop="@dimen/spacing_medium_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data11"
                    android:minWidth="80dp"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/self_check_hint"
                    android:textColor="@color/txtSecondColor"
                    android:textSize="@dimen/textSize_medium"
                    android:typeface="monospace" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_check_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_large"
        android:background="@drawable/selector_check_data"
        android:paddingBottom="@dimen/spacing_medium_small"
        android:paddingLeft="@dimen/spacing_medium_large"
        android:paddingRight="@dimen/spacing_medium_large"
        android:paddingTop="@dimen/spacing_medium_small"
        android:text="生 成 数 据"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_medium_small"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>